# yealink-phonebook

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: main.rs  vcard.rs
