[package]
name = "yealink-phonebook"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["yealink", "phonebook", "remote phonebook", "vcf", "vcard"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
reqwest = { version = "0.11.10", features = [ "stream" ] }
url = "2.2"
ical = { version = "*", features = ["vcard"] }
minidom = "0.14"