[package]
name = "yealink-phonebook"
description = "A simple vCard to Yealink Remote Phonebook server"
homepage = "https://github.com/tylerjwatson/yealink-phonebook"
repository = "https://github.com/tylerjwatson/yealink-phonebook"
documentation = "https://github.com/tylerjwatson/yealink-phonebook"
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["yealink", "phonebook", "vcf", "vcard"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
reqwest = { version = "0.11.10", features = [ "stream" ] }
url = "2.2"
ical = { version = "0.7", features = ["vcard"] }
minidom = "0.14"